--- a/css/chess.css
+++ b/css/chess.css
@@ -1,4 +1,31 @@
+/* Adding  CSS Basic. Added by Lev Lvovsky*/
 
+.row{
+position:relative;
+margin-left:10%;
+margin-right:10%;
+}
+
+.white{
+border: 1px solid black;
+width: 10%;
+height: 60px;
+background-color:white;
+float:left;
+}
+
+.black{
+border: 1px solid black;
+width: 10%;
+height: 60px;
+background-color:#787878;
+float:left;
+}
+
+
+#clear{
+clear:both; 
+}
 
 /* The footer styling. Added by Lev Lvovsky*/
 #footer {
