--- a/css/chess.css
+++ b/css/chess.css
@@ -1,18 +1,34 @@
 /* Adding  CSS Basic. */
 
+body {
+  background-color: #f0f0f0;
+  margin: 0;
+  padding: 20px;
+  font-family: sans-serif;
+  text-align: center;
+}
+
+#title {
+  margin-bottom: 40px;
+}
+
+.chessboard {
+  width: 80%;
+  margin: 0 auto;
+}
+
 .row {
   position: relative;
-  margin-left: 10%;
-  margin-right: 10%;
-  width: 80%;
+  width: 100%;
   height: 60px;
+  clear: both;
 }
 
 .white, .black {
-  border: 1px solid black;
-  width: 12.5%; 
-  height: 100%;
   float: left;
+  width: 12.5%;
+  height: 100%;
+  border: 1px solid black;
 }
 
 .white {
