--- a/css/chess.css
+++ b/css/chess.css
@@ -13,8 +13,10 @@ body {
 }
 
 .chessboard {
-  width: 80%;
+  width: 90vw; 
+  max-width: 480px; 
   margin: 0 auto;
+  overflow: hidden;
 }
 
 .row {
