--- a/css/chess.css
+++ b/css/chess.css
@@ -7,6 +7,7 @@ top:0px;
 left:0px;
 padding:10px;
 margin:0px;
+margin-bottom: 20px; 
 width:100%;
 background-color:#62C2CE;
 text-align:center;
@@ -23,6 +24,7 @@ font-size:36px;
   width: 90vw;
   max-width: 480px;
   margin: 0 auto;
+  margin-top: 20px; 
   overflow: hidden;
 }
 
