--- a/css/chess.css
+++ b/css/chess.css
@@ -57,7 +57,9 @@ img {
 }
 
 #footer {
-border:solid 1px;
-padding: 10px;
-margin:10px;
+  border: solid 1px;
+  padding: 10px;
+  margin: 10px auto; 
+  width: fit-content; 
 }
+
