--- a/css/chess.css
+++ b/css/chess.css
@@ -59,7 +59,8 @@ img {
 #footer {
   border: solid 1px;
   padding: 10px;
-  margin: 10px auto; 
-  width: fit-content; 
+  margin: 10px;
+  text-align: center;
 }
+
 
